# backpack

./: .gitignore  .vercelignore  AGENTS.md  CLI_SETUP.md  MCP_IMPLEMENTATION_SUMMARY.md  PR_BODY.md  README.md  SETUP.md  STRIPE_SYNC.md  bts.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  turbo.json
.claude/skills/no-use-effect/: SKILL.md
.claude/skills/shadcn/: SKILL.md
.planning/: STATE.md  WEB-DESKTOP-APPS.md  code-mode-mcp.md
.planning/phases/01-core-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md
.planning/phases/02-sync-engine/: 02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  (+1 more)
apps/cli/: README.md  package.json  tsconfig.json  tsdown.config.ts
apps/desktop/: .gitignore  .prettierignore  README.md  SETUP.md  VANILLA_MIGRATION.md  components.json  electron-performance-guide.md  esbuild.config.mjs  eslint.config.mjs  forge.config.ts  index-vanilla.html  index.html  next.config.ts  package.json  tsconfig.json  vite.config.mts  vite.config.ts  vite.main.config.mts  vite.preload.config.mts  vite.renderer.config.mts
apps/desktop-old/: README.md  index.html  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/native/: app.json  package.json
apps/server/: .env.example  Dockerfile  README.md  package.json  tsconfig.json  tsdown.config.ts
apps/web/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
scripts/: sync-stripe-transactions.sh  test-stripe-sync.sh
(+355 files in other folders)
