[package]
name = "cortex-desktop"
version = "0.0.0"
description = "Cortex desktop app"
authors = ["Cortex"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
